@@ -21,7 +21,7 @@
 
 
 
-<form action="/login?page=coldmilk.html" method="post" id="login_form" onsubmit="encrypt_pwd();">	
+<form action="login?page=coldmilk.html" method="post" id="login_form" onsubmit="encrypt_pwd();">	
 <div class="simple_form">
 
 	<img src="icon.png" alt="logo" 
