@@ -31,7 +31,7 @@
 		</div>
 		
 		<div id="user-login-form" class="block">
-			<form action="/login?page=interface.html" method="post" id="loginForm" onsubmit="encrypt_pwd();">	
+			<form action="login?page=interface.html" method="post" id="loginForm" onsubmit="encrypt_pwd();">	
 			<h3 class="title">Log in</h3>
 			<div class="item" style="margin-top : 0em;">
 				Username:
