@@ -22,7 +22,7 @@
 		<a href="javascript:show_div('content');">Torrents</a>
 		<a href="javascript:show_div('torrent_load');">Load Torrents</a>
 		<a href="javascript:show_div('settings');">Settings</a>
-		<a href="/logout" title="Logout">Logout</a>
+		<a href="logout" title="Logout">Logout</a>
 		<a href="javascript:shutdown();">Shutdown</a>
 	</div>
 	
@@ -59,7 +59,7 @@
 	
 		<h3 class="title">Upload a torrent</h3>
 
-		<form action="/torrent/load?page=interface.html" method="post" enctype="multipart/form-data">
+		<form action="torrent/load?page=interface.html" method="post" enctype="multipart/form-data">
 			<div class="item" style="min-height : 5em;">
 				File path:
 				<div class="option">
