@@ -14,7 +14,7 @@
 		<img src="ktorrentwebinterfacelogo.png" border="0" alt="ktorrent"/>
 	</div>
 	<table align="center">
-	<form action="/login?page=interface.html" method="post" onsubmit="encrypt_pwd();">
+	<form action="login?page=interface.html" method="post" onsubmit="encrypt_pwd();">
 		<tr><td>Username</td><td><input type="text" name="username" id="username"></td></tr>
 		<tr><td>Password</td><td><input type="password" name="password" id="password"></td></tr>
 		<tr><td></td><td><input type="submit" name="Login" value="Login"></td></tr>
